--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-tactile
 name: Scientific Computing References, Guides, and Notes
-title: null
+title: Scientific Computing References, Guides, and Notes
